src/styles/index.css
.home {
  margin: 20px 750px 20px 20px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.h1 {
  display: flex;
  align-items: center;
}
.card {
  margin: 0 10px 0 10px;
  border-color: rgb(54, 53, 53);
  width: 6rem;
  height: 8rem;
}

.card-body {
  font-size: 70px;
  font-family: "Times New Roman", Times, serif;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 50px;
  margin: 0 5px 0 0;
}

